<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_background_day"
    tools:context="com.xbirder.bike.hummingbird.login.LoginFragment">

    <com.xbirder.bike.hummingbird.common.widget.TitleBar
        android:layout_width="match_parent"
        app:title_text="@string/login_by_phone"
        app:right_text="@string/register"
        android:layout_height="@dimen/title_bar_height"/>

    <TextView
        android:layout_marginLeft="@dimen/default_gap_50"
        android:layout_marginTop="@dimen/default_gap_80"
        android:text="@string/login_remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:background="@drawable/reg_blank"
        android:layout_marginLeft="@dimen/default_gap_50"
        android:layout_marginRight="@dimen/default_gap_50"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/default_gap_20"
        android:layout_height="@dimen/default_gap_100">

        <TextView
            android:background="@color/common_orange_day"
            android:text="+86"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/default_size_40"
            android:layout_width="@dimen/default_gap_180"
            android:layout_height="match_parent" />

        <EditText
            android:hint="@string/login_input_phone_remind"
            android:textColor="@color/common_text_gray_day"
            android:paddingLeft="@dimen/default_gap_10"
            android:gravity="center"
            android:textSize="@dimen/default_size_40"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/reg_blank"
        android:layout_marginLeft="@dimen/default_gap_50"
        android:layout_marginRight="@dimen/default_gap_50"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/default_gap_20"
        android:layout_height="@dimen/default_gap_100">

        <ImageView
            android:textColor="@color/white"
            android:scaleType="centerInside"
            android:src="@drawable/icon_lock"
            android:textSize="@dimen/default_size_40"
            android:layout_width="@dimen/default_gap_180"
            android:layout_height="match_parent" />

        <EditText
            android:hint="@string/password_remind"
            android:textColor="@color/common_text_gray_day"
            android:paddingLeft="@dimen/default_gap_10"
            android:gravity="center"
            android:textSize="@dimen/default_size_40"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <TextView
        android:textColor="@color/common_text_gray_day"
        android:text="@string/foget_password"
        android:layout_marginRight="@dimen/default_gap_50"
        android:gravity="center"
        android:textSize="@dimen/text_size_small"
        android:layout_width="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/default_gap_20"
        android:layout_height="wrap_content" />


    <ImageButton
        android:id="@+id/btn_start"
        android:scaleType="fitCenter"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/default_gap_120"
        android:layout_width="@dimen/default_gap_300"
        android:background="@null"
        android:src="@drawable/start"
        android:layout_height="@dimen/default_gap_300" />


</LinearLayout>
