<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xbirder.bike.hummingbird.register.RegisterStep1">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_gap_50"
        android:layout_marginRight="@dimen/default_gap_50"
        android:layout_marginTop="@dimen/default_gap_120"
        android:text="@string/enter_auth_code"
        android:textColor="@color/common_text_gray_day">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_gap_100"
        android:layout_marginLeft="@dimen/default_gap_50"
        android:layout_marginRight="@dimen/default_gap_50"
        android:layout_marginTop="@dimen/default_gap_20"
        android:background="@drawable/reg_check">

        <EditText
            android:id="@+id/reg_code_text"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@drawable/icon_text"
            android:drawablePadding="@dimen/default_gap_10"
            android:gravity="left|center_vertical"
            android:hint="@string/input_code_hint"
            android:inputType="number"
            android:paddingLeft="@dimen/default_gap_15" />

        <com.xbirder.bike.hummingbird.login.widget.CountDownButton
            android:id="@+id/resend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:paddingRight="@dimen/default_gap_15"
            android:text="@string/resent"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_gap_100"
        android:layout_marginLeft="@dimen/default_gap_50"
        android:layout_marginRight="@dimen/default_gap_50"
        android:layout_marginTop="@dimen/default_gap_20"
        android:background="@drawable/reg_blank">

        <EditText
            android:id="@+id/find_pass"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@drawable/icon_lock"
            android:drawablePadding="@dimen/default_gap_10"
            android:gravity="left|center_vertical"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/default_gap_15" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_gap_100"
        android:layout_marginLeft="@dimen/default_gap_50"
        android:layout_marginRight="@dimen/default_gap_50"
        android:layout_marginTop="@dimen/default_gap_20"
        android:background="@drawable/reg_blank">

        <EditText
            android:id="@+id/find_pass_check"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@drawable/icon_lock"
            android:drawablePadding="@dimen/default_gap_10"
            android:gravity="left|center_vertical"
            android:hint="@string/check_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/default_gap_15" />

    </LinearLayout>


    <Button
        android:id="@+id/reg_done"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_gap_100"
        android:layout_marginLeft="@dimen/default_gap_50"
        android:layout_marginRight="@dimen/default_gap_50"
        android:layout_marginTop="@dimen/default_gap_40"
        android:background="@drawable/reg_btn"
        android:text="@string/done"
        android:textColor="@color/white"></Button>


</LinearLayout>
