<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".setting.FeedbackActivity">
    <com.xbirder.bike.hummingbird.common.widget.TitleBar
        android:layout_width="match_parent"
        app:title_text="@string/setting_feedback"
        android:id="@+id/title_bar"
        android:layout_height="@dimen/title_bar_height"/>

    <TextView
        android:layout_width="match_parent"
        android:textSize="@dimen/text_size_big"
        android:layout_marginTop="@dimen/default_gap_40"
        android:layout_marginLeft="@dimen/default_gap_60"
        android:text="@string/feedback_head"
        android:textColor="#000000"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/feedback_edit"
        android:layout_width="match_parent"
        android:textSize="@dimen/text_size_mid"
        android:layout_height="@dimen/default_gap_400"
        android:layout_marginTop="@dimen/default_gap_30"
        android:layout_marginLeft="@dimen/default_gap_60"
        android:layout_marginRight="@dimen/default_gap_60"
        android:gravity="top"
        android:background="@drawable/feedback_edit_bg"/>

<Button
    android:id="@+id/feedback_commit"
    android:layout_width="match_parent"
    android:layout_height="@dimen/default_gap_93"
    android:text="@string/commit"
    android:textColor="@color/common_orange_day"
    android:textSize="@dimen/default_size_36"
    android:layout_marginLeft="@dimen/default_gap_70"
    android:layout_marginRight="@dimen/default_gap_70"
    android:layout_marginTop="@dimen/default_gap_20"
    android:background="@drawable/reg_btn"/>


</LinearLayout>
