<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xbirder.bike.hummingbird.register.RegisterStep1">


    <TextView
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_gap_50"
        android:layout_marginRight="@dimen/default_gap_50"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/default_gap_120"
        android:text="@string/find_password_remind"
        android:textColor="@color/common_text_gray_day">
    </TextView>

    <LinearLayout
        android:background="@drawable/reg_blank"
        android:layout_marginLeft="@dimen/default_gap_50"
        android:layout_marginRight="@dimen/default_gap_50"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_gap_100"
        android:layout_marginTop="@dimen/default_gap_10">

        <TextView
            android:background="@color/common_orange_day"
            android:text="+86"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/default_size_40"
            android:layout_width="@dimen/default_gap_180"
            android:layout_height="match_parent" />

        <EditText
            android:hint="@string/register_input_phone_remind"
            android:textColor="@color/common_text_gray_day"
            android:paddingLeft="@dimen/default_gap_10"
            android:gravity="left|center_vertical"
            android:background="@null"
            android:inputType="phone"
            android:textSize="@dimen/default_size_40"
            android:id="@+id/reg_phone_num"
            android:layout_width="fill_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:background="@drawable/btn_finish_reg"
        android:layout_marginLeft="@dimen/default_gap_50"
        android:layout_marginRight="@dimen/default_gap_50"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/default_gap_20"
        android:text="@string/input_code"
        android:textColor="@color/white"
        android:id="@+id/reg_send_code"
        android:layout_height="@dimen/default_gap_100">
    </Button>




</LinearLayout>
