<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.xbirder.bike.hummingbird.common.widget.TitleBar
        android:layout_width="match_parent"
        app:title_text="@string/change_passwrod"
        android:id="@+id/title_bar"
        android:layout_height="@dimen/title_bar_height"/>

    <LinearLayout
        android:background="@drawable/reg_blank"
        android:layout_marginLeft="@dimen/default_gap_50"
        android:layout_marginRight="@dimen/default_gap_50"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/default_gap_20"
        android:layout_height="@dimen/default_gap_100">

        <EditText
            android:layout_weight="1"
            android:drawableLeft="@drawable/icon_text"
            android:layout_width="0dip"
            android:hint="@string/old_password_hint"
            android:gravity="left|center_vertical"
            android:background="@null"
            android:id="@+id/et_old_pwd"
            android:paddingLeft="@dimen/default_gap_15"
            android:inputType="numberPassword"
            android:drawablePadding="@dimen/default_gap_10"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/reg_blank"
        android:layout_marginLeft="@dimen/default_gap_50"
        android:layout_marginRight="@dimen/default_gap_50"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/default_gap_20"
        android:layout_height="@dimen/default_gap_100">

        <EditText
            android:layout_weight="1"
            android:drawableLeft="@drawable/icon_lock"
            android:drawablePadding="@dimen/default_gap_10"
            android:layout_width="0dip"
            android:paddingLeft="@dimen/default_gap_15"
            android:gravity="left|center_vertical"
            android:background="@null"
            android:id="@+id/et_new_pwd"
            android:hint="@string/new_password_hint"
            android:inputType="numberPassword"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/reg_blank"
        android:layout_marginLeft="@dimen/default_gap_50"
        android:layout_marginRight="@dimen/default_gap_50"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/default_gap_20"
        android:layout_height="@dimen/default_gap_100">

        <EditText
            android:layout_weight="1"
            android:drawableLeft="@drawable/icon_user"
            android:singleLine="true"
            android:drawablePadding="@dimen/default_gap_10"
            android:layout_width="0dip"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/default_gap_15"
            android:background="@null"
            android:id="@+id/et_center_new_pwd"
            android:inputType="numberPassword"
            android:hint="@string/repeat_new_password_hint"
            android:layout_height="match_parent" />

    </LinearLayout>

    <Button
        android:background="@drawable/reg_btn"
        android:layout_marginLeft="@dimen/default_gap_50"
        android:layout_marginRight="@dimen/default_gap_50"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/default_gap_20"
        android:text="@string/commit"
        android:textColor="@color/white"
        android:id="@+id/btn_succeed"
        android:layout_height="@dimen/default_gap_100">
    </Button>
</LinearLayout>