<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xbirder.bike.hummingbird.register.RegisterStep1">

    <ImageView
        android:id="@+id/reg_head"
        android:background="@drawable/icon_photo"
        android:layout_marginTop="@dimen/default_gap_80"
        android:layout_width="@dimen/default_gap_230"
        android:layout_gravity="center_horizontal"
        android:layout_height="@dimen/default_gap_210"/>

    <LinearLayout
        android:background="@drawable/reg_check"
        android:layout_marginLeft="@dimen/default_gap_50"
        android:layout_marginRight="@dimen/default_gap_50"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/default_gap_40"
        android:layout_height="@dimen/default_gap_100">

        <EditText
            android:layout_weight="1"
            android:drawableLeft="@drawable/icon_text"
            android:layout_width="0dip"
            android:gravity="left|center_vertical"
            android:background="@null"
            android:id="@+id/reg_code_text"
            android:paddingLeft="@dimen/default_gap_15"
            android:inputType="number"
            android:drawablePadding="@dimen/default_gap_10"
            android:layout_height="match_parent" />

        <com.xbirder.bike.hummingbird.login.widget.CountDownButton
            android:text="@string/resent"
            android:background="@null"
            android:id="@+id/resend"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:paddingRight="@dimen/default_gap_15"
            android:gravity="center"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/reg_blank"
        android:layout_marginLeft="@dimen/default_gap_50"
        android:layout_marginRight="@dimen/default_gap_50"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/default_gap_20"
        android:layout_height="@dimen/default_gap_100">

        <EditText
            android:layout_weight="1"
            android:drawableLeft="@drawable/icon_lock"
            android:drawablePadding="@dimen/default_gap_10"
            android:layout_width="0dip"
            android:paddingLeft="@dimen/default_gap_15"
            android:gravity="left|center_vertical"
            android:background="@null"
            android:id="@+id/reg_pass"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/reg_blank"
        android:layout_marginLeft="@dimen/default_gap_50"
        android:layout_marginRight="@dimen/default_gap_50"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/default_gap_20"
        android:layout_height="@dimen/default_gap_100">

        <EditText
            android:layout_weight="1"
            android:drawableLeft="@drawable/icon_user"
            android:singleLine="true"
            android:drawablePadding="@dimen/default_gap_10"
            android:layout_width="0dip"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/default_gap_15"
            android:background="@null"
            android:id="@+id/reg_username"
            android:hint="@string/reg_name"
            android:layout_height="match_parent" />

    </LinearLayout>

    <Button
        android:background="@drawable/btn_finish_reg"
        android:layout_marginLeft="@dimen/default_gap_50"
        android:layout_marginRight="@dimen/default_gap_50"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/default_gap_40"
        android:text="@string/done"
        android:textColor="@color/white"
        android:id="@+id/reg_done"
        android:layout_height="@dimen/default_gap_100">
    </Button>


</LinearLayout>
